Cleaned up the css furthermore, left comments on various edited sass files and htmls with TODOs

--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ email               : "reg258@cornell.edu"
 linkedin            : "https://linkedin.com/ricardo-enrique-gonzalez-penuela-b6ab04155"
 github              : "https://github.com/rgonzalezp" 
 gitlab              : 
-website             : "https://rgonzalezp.github.io"
+website             : 
 twitter             : 
 facebook            : 
 instagram           : 
