--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 url                 : "https://rgonzalezp.github.io"
 baseurl             : ""
 permalink           : /:title/
-description         : "Accessibility and HCI Researcher Ricardo Gonzalez Penuela is a 2nd Year PhD student at Cornell Tech, New York City. He is passionate about videogames, running, Mandarin, and Japanese media. Currently, his work focuses in understanding how people with disabilities use AI services to inform how can these technologies be improved to empower people with disabilities. Furthermore, he is also working on creating an equitable XR accessible experience with/for people with visual impairments. As of today, he has worked together with people with visual impairments, including blind and people with low vision, to improve the accessibility of 3D virtual environments, AI powered systems, and mobile cameras."
+description         : "Accessibility and HCI Researcher Ricardo Gonzalez Penuela is a 3rd Year PhD student at Cornell Tech, New York City. He is passionate about videogames, running, Mandarin, and Japanese media. Currently, his work focuses in understanding how people with disabilities use AI services to inform how can these technologies be improved to empower people with disabilities. Furthermore, he is also working on creating an equitable XR accessible experience with/for people with visual impairments. As of today, he has worked together with people with visual impairments, including blind and people with low vision, to improve the accessibility of 3D virtual environments, AI powered systems, and mobile cameras."
 markdown            : kramdown
 statement           : "Stay Determined!"
 bgtext              : "ABCFGHKLMNPQRSVWXYZabcdefghijklmnopqrstuvwxyz@#$%&*+-;/[]<>~" # texts randomly displayed in background
