--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,7 @@ bgtext              : "ABCFGHKLMNPQRSVWXYZabcdefghijklmnopqrstuvwxyz@#$%&*+-;/[]
 # Keep it null if you want to show items in alphabetic order.
 collection_order    : 
   [
-    "research",
-    "posts",
-    "my_notes",
-    "projects",
+    "research"
     
   ]
 collections:
